<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/pt_C4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pt_C4"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_C4B"
        app:layout_constraintTop_toBottomOf="@+id/pt_C3" />

    <EditText
        android:id="@+id/pt_C3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pt_C3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pt_C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_C3B"
        app:layout_constraintTop_toBottomOf="@+id/pt_C2" />

    <EditText
        android:id="@+id/pt_C2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pt_C2"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pt_C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_C2B"
        app:layout_constraintTop_toBottomOf="@+id/pt_C1" />

    <TextView
        android:id="@+id/tv_C4B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_F"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toStartOf="@+id/pt_C4"
        app:layout_constraintStart_toEndOf="@+id/tv_C4A"
        app:layout_constraintTop_toBottomOf="@+id/tv_C3B" />

    <TextView
        android:id="@+id/tv_C4A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_F"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toStartOf="@+id/tv_C4B"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_C3A" />

    <TextView
        android:id="@+id/tv_C3A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_F"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_C4A"
        app:layout_constraintEnd_toStartOf="@+id/tv_C3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_C2A" />

    <TextView
        android:id="@+id/tv_C3B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_T"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_C4B"
        app:layout_constraintEnd_toStartOf="@+id/pt_C3"
        app:layout_constraintStart_toEndOf="@+id/tv_C3A"
        app:layout_constraintTop_toBottomOf="@+id/tv_C2B" />

    <TextView
        android:id="@+id/tv_C2A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_T"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_C3A"
        app:layout_constraintEnd_toStartOf="@+id/tv_C2B"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_C1A" />

    <TextView
        android:id="@+id/tv_C2B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_F"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_C3B"
        app:layout_constraintEnd_toStartOf="@+id/pt_C2"
        app:layout_constraintStart_toEndOf="@+id/tv_C2A"
        app:layout_constraintTop_toBottomOf="@+id/tv_C1B" />

    <TextView
        android:id="@+id/tv_C1B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_T"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_C2B"
        app:layout_constraintEnd_toStartOf="@+id/pt_C1"
        app:layout_constraintStart_toEndOf="@+id/tv_C1A"
        app:layout_constraintTop_toBottomOf="@+id/tvBHead" />

    <TextView
        android:id="@+id/tv_C1A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_T"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_C2A"
        app:layout_constraintEnd_toStartOf="@+id/tv_C1B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAHead" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_header"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/a_header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvBHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <TextView
        android:id="@+id/tvBHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/b_header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvABHead"
        app:layout_constraintStart_toEndOf="@+id/tvAHead"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <TextView
        android:id="@+id/tvABHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ab_header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBHead"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <EditText
        android:id="@+id/pt_C1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pt_C1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/pt_C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_C1B"
        app:layout_constraintTop_toBottomOf="@+id/tvABHead" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_C4B" />

</androidx.constraintlayout.widget.ConstraintLayout>